- Define models and repositories using "sequelize-typescript" package. - Implement functionality of the 4 main endpoints.
